added slider for length property

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <!-- non-editable, style-id, placeholder-text, aria-label? is this like alt text for pics? -->
         </div>
         <!-- end of display field bounding box -->
+        
+        <div class="strength" data-min="8" data-max="128">
+          <div class="length-title" data-length="0">Length:</div>
+          <input id="slider" type="range" min="8" max="128" value="8" />
+        </div>
 
 <!-- add length input field -->
 <!-- add upper selection -->
@@ -46,6 +51,8 @@
           <!-- button to generate password. needs to be driven by java -->
         </div>
         <!-- end of generate button bounding box -->
+
+
       </div>
       <!-- end of app bounding box -->
     </div>
