added uppercase checkbox

--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
           <!-- non-editable, style-id, placeholder-text, aria-label? is this like alt text for pics? -->
         </div>
         <!-- end of display field bounding box -->
-        
-        <div class="strength" data-min="8" data-max="128">
+
+        <div class="length" data-min="8" data-max="128">
           <div class="length-title" data-length="0">Length:</div>
           <input id="slider" type="range" min="8" max="128" value="8" />
         </div>
+        <!-- slider added -->
 
-<!-- add length input field -->
+        <div class="strength">
+          <div class="parameters">
+            <input type="checkbox" id="uppercase" checked />
+            <label for="uppercase">Uppercase Letters</label>
+          </div>
+        </div>
+
 <!-- add upper selection -->
 <!-- add lower selection -->
 <!-- add special characters selection -->
