copied for lower, number and special

--- a/index.html
+++ b/index.html
@@ -46,10 +46,32 @@
           </div>
         </div>
 
-<!-- add upper selection -->
-<!-- add lower selection -->
-<!-- add special characters selection -->
-<!-- add numbers selection -->
+        <div class="strength">
+          <div class="parameters">
+            <input type="checkbox" id="lowercase" checked />
+            <label for="lowercase">Lowercase Letters</label>
+          </div>
+        </div>
+
+        <div class="strength">
+          <div class="parameters">
+            <input type="checkbox" id="numerical" checked />
+            <label for="numerical">Numbers</label>
+          </div>
+        </div>
+
+        <div class="strength">
+          <div class="parameters">
+            <input type="checkbox" id="special" checked />
+            <label for="special">Special Characters</label>
+          </div>
+        </div>
+
+<!-- added upper selection -->
+<!-- added lower selection -->
+<!-- added special characters selection -->
+<!-- added numbers selection -->
+<!-- all checked by default -->
 
 
         <div class="card-footer">
