message updates and visibility/opacity

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
         <h1>Password Generator</h1>
         <!-- header name -->
       </header>
+
+      <div class="card-start">
+        <button id="start" class="btn">Would You Like To Generate A Password?</button>
+      </div>
+
       <div class="card">
         <!-- app bounding box -->
+        
         <div class="card-header">          
-          <h2>Generate a Password</h2>
+          <h2>Generate Your Password!</h2>
           <!-- app header -->
-        </div>
+        </div>      
         <!-- end header bounding box -->
+
         <div class="card-body">
           <!-- display field for the generated password -->
           <textarea
@@ -29,6 +36,7 @@
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
+          <p>Select complexity characteristics below, we'll do the rest!</p>
           <!-- non-editable, style-id, placeholder-text, aria-label? is this like alt text for pics? -->
         </div>
         <!-- end of display field bounding box -->
@@ -67,11 +75,11 @@
           </div>
         </div>
 
-<!-- added upper selection -->
-<!-- added lower selection -->
-<!-- added special characters selection -->
-<!-- added numbers selection -->
-<!-- all checked by default -->
+            <!-- added upper selection -->
+            <!-- added lower selection -->
+            <!-- added special characters selection -->
+            <!-- added numbers selection -->
+            <!-- all checked by default -->
 
 
         <div class="card-footer">
@@ -84,6 +92,7 @@
 
       </div>
       <!-- end of app bounding box -->
+
     </div>
     <!-- end of page bounding box -->
     <script src="script.js"></script>
