no substantial changes. js file contains commented out broken attempts at password generator

--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
         <!-- slider added -->
 
         <div class="strength">
-          <div class="parameters">
+          <div class="parameters" id="selectionsup">
             <input type="checkbox" id="uppercase" checked />
             <label for="uppercase">Uppercase Letters</label>
           </div>
         </div>
 
         <div class="strength">
-          <div class="parameters">
-            <input type="checkbox" id="lowercase" checked />
+          <div class="parameters" id="selectionslow">
+            <input type="checkbox" id="lowercase" unchecked />
             <label for="lowercase">Lowercase Letters</label>
           </div>
         </div>
 
         <div class="strength">
-          <div class="parameters">
+          <div class="parameters" id="selectionsnum">
             <input type="checkbox" id="numerical" checked />
             <label for="numerical">Numbers</label>
           </div>
         </div>
 
         <div class="strength">
-          <div class="parameters">
-            <input type="checkbox" id="special" checked />
+          <div class="parameters" id="selectionssp">
+            <input type="checkbox" id="special" unchecked />
             <label for="special">Special Characters</label>
           </div>
         </div>
