unique readme without assinment instructions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </header>
 
       <div class="card-start">
-        <button id="start" class="btn">Would You Like To Generate A Password?</button>
+        <button id="start" class="btn">Click Me To Generate a Password</button>
       </div>
 
       <div class="card">
